BUG 31222046 - .IDB GROWS INDEFENITELY (BUG #96466 WITH REPLACE)

Problem:

The function lob::purge() didn't free the LOB when the undo record type
was TRX_UNDO_UPD_DEL_REC, which is generated when there is an insert
by modification of a delete-marked record.

Solution:

Free the LOB correctly.

rb#24357 approved by Mayank Prasad <mayank.prasad@oracle.com>